[tool.poetry]
name = "context_logging"
version = "1.2.0"
description = "Tool for easy logging with current context information"
authors = ["Evgeniy Afonasev <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Afonasev/context_logging"
homepage = "https://pypi.org/project/context_logging"
keywords = ["logging", "logger", "context"]

[tool.poetry.dependencies]
python = "^3.7"
contextvars_executor = "^0.0.1"
deprecated = "^1.2.10"

[tool.poetry.group.dev.dependencies]
black = [
  { version = ">=23.7", python = ">=3.8" },
  { version = "<=23.7", python = "<3.8" }
]
codecov = "^2.1.8"
flake8-awesome = "^1"
mypy = "*"
pylint = [
  { version = "^2.17.5", python = ">=3.8" },
  { version = "^2", python = "<3.8" }
]
py = "^1.11"
pytest = "^7"
pytest-asyncio = "^0.21"
pytest-cov = "^4"
pytest-deadfixtures = "^2"
pytest-mock = "^3"
types-deprecated = "^1.2.9.3"
unify = "^0.5"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
